--- a/src/styles.css
+++ b/src/styles.css
@@ -21,19 +21,65 @@
     font-style: italic;
 }
 @font-face {
-    font-family: "SlimJoe";
-    src: url("/assets/fonts/Slim-Joe.otf");
+    font-family: "Slim-Joe";
+    src: url("/assets/fonts/Slim-Joe.woff");
     font-weight: bold;
     font-style: italic;
 }
 
-body{
-	padding-top: 3.5rem;
-	background-image: url(/assets/images/bg.jpg);
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover; 
+@font-face {
+    font-family: "Verlag-Book";
+    src: url("/assets/fonts/Verlag-Book.woff");
+}
+
+@font-face {
+    font-family: "Verlag-Book";
+    src: url("/assets/fonts/Verlag-Bold.woff");
+    font-weight: bold;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .navbar, .brand, .btn-simple, a, .td-name, td {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Verlag-Book","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+h1, .h1 {
+  font-size: 3em;
+  line-height: 1.213483146em;
+  font-weight: bold;
+}
+
+h2, .h2 {
+  font-size: 2em;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  margin: 0.4em 0;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h3, .h3 {
+  font-size: 1.619047619em;
+  line-height: 1.058823529em;
+  margin-top: 1.05882353em;
+  margin-bottom: 1.05882353em;
+}
+
+h4, .h4 {
+  font-size: 1.125em;
+  line-height: 1.714285714em;
+}
+
+h5 {
+  font-size: 1.2em;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.4737;
+  font-weight: 400;
+  margin: 0 0 .75em;
 }
 
 .color-white{
