--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@
   position: relative;
 }
 .separator-container .separator {
-  color: #FFFFFF;
+  color: #c5a47e;
   margin: 0 auto 1em;
   width: 11em;
 }
@@ -12,12 +12,123 @@
   width: 40%;
   content: " ";
   margin-top: 14px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #c5a47e;
 }
 .separator-container .separator.line-separator:before {
   float: left;
 }
 .separator-container .separator.line-separator:after {
   float: right;
+}
+.section {
+  padding: 1.875em 0;
+  position: relative;
+  background-color: #FFFFFF;
+}
+.section .title {
+  max-width: 760px;
+  margin: 0 auto;
+  display: block;
+}
+.section .text-area {
+  padding: 4.375em 0;
+  position: relative;
+  z-index: 3;
+  display: block;
+  background-color: #FFFFFF;
+}
+.section-header {
+  padding: 0;
+}
+.section-header .container {
+  z-index: 3;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: block;
+  top: 0;
+}
+.section-header .content {
+  position: relative;
+  color: white;
+  text-align: center;
+  text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+  vertical-align: center;
+  line-height: 1.7;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.section-header h1 {
+  letter-spacing: 0.1em;
+  font-weight: 100;
+  font-size: 6em;
+  font-family: "Slim-Joe";
+  text-transform: uppercase;
+  text-shadow: -2px 2px 0px rgba(0, 0, 0, 0.3), -2px 4px 2px rgba(0, 0, 0, 0.1);
+}
+.section-header h5 {
+  font-size: 1.3em;
+  margin: 0 auto .5em;
+  line-height: 1.5;
+  letter-spacing: 0.125;
+  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+  font-family: 'Droid Serif',"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+.section-header p {
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin: 1em 0 0.5em;
+}
+.section-header p span {
+  text-transform: lowercase;
+}
+.section-header .separator {
+  color: #fff;
+  margin: 2em auto;
+}
+.section-header .separator.line-separator:before, .section-header .separator.line-separator:after {
+  border-color: white;
+}
+.section .parallax, .section .full-image {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: block;
+}
+.section .parallax > img, .section .full-image > img {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: relative;
+  z-index: 1;
+}
+.section .responsive-background {
+  position: relative;
+  background-color: #c5a47e;
+  padding: 0;
+  z-index: 1;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  min-height: 500px;
+}
+.pattern-image {
+  width: 100%;
+  background-size: 100%;
+}
+.section-we-are-1 p {
+  color: #777777;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.title p {
+  color: #777777;
 }
 
