Ajout d'une font d'icone, ajout du composant menu droit, debut implementation des mecaniques d'affichage du menu

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,12 @@
 
-<nav class="navbar navbar-expand-md fixed-top color-white">
+<nav class="navbar navbar-default navbar-fixed-top fixed-top">
 	<div class="container">
 		<div class="navbar-brand">
 			{{company}}
 		</div>
-		<div class="navbar-text float-md-right">
+		<button class="navbar-toggle" (click)="toggleMenu()">
 			<span class="oi oi-menu"></span>
-		</div>
+		</button>
 	</div>
 </nav>
 
