--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,85 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-menu></app-menu>
-<div class="wrapper">
-  <div class="section section-header">
-    <div class="parallax pattern-image">
-      <img src="/assets/images/bg.jpg">
-    </div>
-    <div class="container">
-      <div class="content">
-        <h1>
-          {{company}}
-        </h1>
-        <div class="separator-container">
-          <div class="separator line-separator">
-            ∎
-          </div>
-        </div>
-        <p>
-          {{company}} allow you to design, together, your own Eden.
-        </p>
+<div >
+  <app-menu></app-menu>
+  <div class="wrapper">
+    <div class="section section-header">
+      <div class="parallax pattern-image">
+        <img src="/assets/images/bg.jpg">
       </div>
-    </div>    
-  </div>
-
-  <div class="section section-1">
-    <div class="text-area">
       <div class="container">
-        <div class="row">
-          <div class="title">
-            <h2>About {{company}}</h2>
-            <div class="separator-container">
-              <div class="separator line-separator">
-                ∎
-              </div>
+        <div class="content">
+          <h1>
+            {{company}}
+          </h1>
+          <div class="separator-container">
+            <div class="separator line-separator">
+              ∎
             </div>
-            <p class="large">
-              {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
-            </p>
+          </div>
+          <p>
+            {{company}} allow you to design, together, your own Eden.
+          </p>
+        </div>
+      </div>    
+    </div>
+    <div class="section section-1">
+      <div class="text-area">
+        <div class="container">
+          <div class="row">
+            <div class="title">
+              <h2>About {{company}}</h2>
+              <div class="separator-container">
+                <div class="separator line-separator">
+                  ∎
+                </div>
+              </div>
+              <p class="large">
+                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-1">
+      <div class="text-area">
+        <div class="container">
+          <div class="row">
+            <div class="title">
+              <h2>About {{company}}</h2>
+              <div class="separator-container">
+                <div class="separator line-separator">
+                  ∎
+                </div>
+              </div>
+              <p class="large">
+                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-1">
+      <div class="text-area">
+        <div class="container">
+          <div class="row">
+            <div class="title">
+              <h2>About {{company}}</h2>
+              <div class="separator-container">
+                <div class="separator line-separator">
+                  ∎
+                </div>
+              </div>
+              <p class="large">
+                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <app-right-menu [hidden]="!rightMenuDisplayed"></app-right-menu>
 </div>
-
 
