--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,8 +1,33 @@
 .navbar .navbar-brand {
   font-weight: 600;
   margin: 5px 0px;
-  padding: 20px 15px;
   font-size: 20px;
   font-family: "Slim-Joe";
   letter-spacing: 0;
+}
+.navbar-default {
+  background-color: white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.navbar-default .navbar-nav > li > a:not(.btn) {
+  color: #343434;
+}
+.navbar.navbar-fixed-top {
+  transition: all .5s .1s;
+}
+.navbar-toggle {
+  outline: 0 !important;
+  border: 0;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  display: block;
+  position: relative;
+  float: right;
+  margin-top: 8px;
+  color: #343434;
+  cursor: pointer;
+}
+.navbar-toggle:hover, .navbar-toggle:focus {
+	background-color: transparent !important;
 }
