--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div >
+<div [ngClass]="{'nav-open': rightMenuDisplayed}">
   <app-menu></app-menu>
   <div class="wrapper">
     <div class="section section-header">
@@ -80,6 +80,6 @@
       </div>
     </div>
   </div>
-  <app-right-menu [hidden]="!rightMenuDisplayed"></app-right-menu>
+  <app-right-menu></app-right-menu>
 </div>
 
