--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" style="min-height: 900px;">
+<div class="collapse navbar-collapse" [@menuTranslation]="menuTranslate()" style="min-height: 900px;">
 	<ul class="nav navbar-nav">
 		<li class="social-links">
 			<a>
