Ajout image + début ajout animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,48 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-8">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/hand-drawing-1.jpg">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/montage-3.jpg">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/hand-drawing-2.jpg">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/montage-1.jpg">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/montage-2.jpg">
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card add-animation animation animate">
+                  <img src="/assets/images/montage-4.jpg">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="section section-1">
       <div class="text-area">
