--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -132,3 +132,30 @@
   color: #777777;
 }
 
+.card img {
+    max-width: 100%;
+}
+
+.card{
+  margin-bottom: 30px
+}
+
+.add-animation{
+  opacity: 0;
+  -webkit-transition: all 0.7s ease-out 0.6s;
+  -moz-transition: all 0.7s ease-out 0.6s;
+  -o-transition: all 0.7s ease-out 0.6s;
+  -ms-transition: all 0.7s ease-out 0.6s;
+  transition: all 0.7s ease-out 0.6s;
+}
+
+.animation{
+  -webkit-transition: all 0.7s ease-out 0.3s;
+  -moz-transition: all 0.7s ease-out 0.3s;
+  -o-transition: all 0.7s ease-out 0.3s;
+  -ms-transition: all 0.7s ease-out 0.3s;
+  transition: all 0.7s ease-out 0.3s;
+}
+.animate{
+  opacity: 1;  
+}
