Correction de l'affichage du menu haut quand il est redimensionné sur une résolution de largeur inférieur à 1280

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@
     font-family: "DroidSerif";
     src: url("/assets/fonts/DroidSerif-Regular.ttf");
 }
-
 @font-face {
     font-family: "DroidSerif";
     src: url("/assets/fonts/DroidSerif-Bold.ttf");
@@ -26,30 +25,25 @@
     font-weight: bold;
     font-style: italic;
 }
-
 @font-face {
     font-family: "Verlag-Book";
     src: url("/assets/fonts/Verlag-Book.woff");
 }
-
 @font-face {
     font-family: "Verlag-Book";
     src: url("/assets/fonts/Verlag-Bold.woff");
     font-weight: bold;
 }
-
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .navbar, .brand, .btn-simple, a, .td-name, td {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: "Verlag-Book","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-
 h1, .h1 {
   font-size: 3em;
   line-height: 1.213483146em;
   font-weight: bold;
 }
-
 h2, .h2 {
   font-size: 2em;
   line-height: 1.25;
@@ -58,34 +52,28 @@ h2, .h2 {
   font-weight: bold;
   text-transform: uppercase;
 }
-
 h3, .h3 {
   font-size: 1.619047619em;
   line-height: 1.058823529em;
   margin-top: 1.05882353em;
   margin-bottom: 1.05882353em;
 }
-
 h4, .h4 {
   font-size: 1.125em;
   line-height: 1.714285714em;
 }
-
 h5 {
   font-size: 1.2em;
 }
-
 p {
   font-size: 1em;
   line-height: 1.4737;
   font-weight: 400;
   margin: 0 0 .75em;
 }
-
 .color-white{
 	color:#FFFFFF;
 }
-
 .wrapper {
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -93,7 +81,6 @@ p {
   -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
-
 .nav-open .wrapper {
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -107,25 +94,23 @@ p {
   -ms-transform: translate3d(-150px, 0, 0);
   transform: translate3d(-150px, 0, 0);
 }
-
-.navbar .container{
+.navbar .container .navbar-toggle{
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
-
-.nav-open .navbar .container {
+.nav-open .navbar .container .navbar-toggle{
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 
-  -webkit-transform: translate3d(-200px, 0, 0);
-  -moz-transform: translate3d(-200px, 0, 0);
-  -o-transform: translate3d(-200px, 0, 0);
-  -ms-transform: translate3d(-200px, 0, 0);
-  transform: translate3d(-200px, 0, 0);
+  -webkit-transform: translate3d(-300px, 0, 0);
+  -moz-transform: translate3d(-300px, 0, 0);
+  -o-transform: translate3d(-300px, 0, 0);
+  -ms-transform: translate3d(-300px, 0, 0);
+  transform: translate3d(-300px, 0, 0);
 }
