--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,13 @@
-
-<nav class="navbar navbar-default navbar-fixed-top fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top fixed-top" [ngClass]="{'navbar-transparent': !isOutsideView}">
 	<div class="container">
 		<div class="navbar-brand">
 			{{company}}
 		</div>
-		<button class="navbar-toggle" (click)="toggleMenu()">
-			<span class="oi oi-menu"></span>
+		<button class="navbar-toggle" (click)="toggleMenu()" [ngClass]="{'toggled': rightMenuDisplayed}">
+			<!-- <span class="oi oi-menu"></span> -->
+			<span class="icon-bar bar1"></span>
+			<span class="icon-bar bar2"></span>
+			<span class="icon-bar bar3"></span>
 		</button>
 	</div>
 </nav>
