--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>    
     </div>
-    <div class="section section-1">
+    <div class="section section-1" id="about">
       <div class="text-area">
         <div class="container">
           <div class="row">
@@ -34,7 +34,7 @@
                 </div>
               </div>
               <p class="large">
-                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
+                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected landscape companies near you.
               </p>
             </div>
           </div>
@@ -83,26 +83,51 @@
         </div>
       </div>
     </div>
-    <div class="section section-1">
+    <div class="section section-2" id="whatwedo">
       <div class="text-area">
         <div class="container">
           <div class="row">
             <div class="title">
-              <h2>About {{company}}</h2>
+              <h2>What we do</h2>
               <div class="separator-container">
                 <div class="separator line-separator">
                   ∎
                 </div>
-              </div>
-              <p class="large">
-                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
-              </p>
+              </div>                
             </div>
+            <div class="row">
+                <div class="col-md-4">
+                  <div class="card">
+                      <div class="icon">
+                        <i class="fa fa-pencil-square-o"></i>
+                      </div>
+                      <h3>Design Landscape</h3>
+                      <p>Our main goal is to collaborate with you to find out the garden you wish, and provides hand-drawing and computer drawing to visualize the possibilities.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                      <div class="icon">
+                        <i class="fa fa-camera-retro"></i>
+                      </div>
+                      <h3>Provide Support</h3>
+                      <p>With the help of camera, drone and computer, we provide many possibilities to display your ideas directly in your current garden.</p>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card">
+                      <div class="icon">
+                        <i class="fa fa-pagelines"></i>
+                      </div>
+                      <h3>Green Expertise</h3>
+                      <p>Passionated and expert, we will give you the best advices for the choice of plants, their disposition and their harmony.</p>
+                  </div>
+                </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="section section-1">
+    <div class="section">
       <div class="text-area">
         <div class="container">
           <div class="row">
@@ -114,7 +139,7 @@
                 </div>
               </div>
               <p class="large">
-                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected ladnscape comanies near you.
+                {{company}} is a startup that designs for you a custom exterior design project and accompany you for the realization. As a result of our work, you can do your garden yourself by following our step by step advice or consulting selected landscape companies near you.
               </p>
             </div>
           </div>
