--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -14,8 +14,8 @@
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
-		<li><a>About</a></li>
-		<li><a>What we do</a></li>
+		<li><a href="#about">About</a></li>
+		<li><a href="#whatwedo">What we do</a></li>
 		<li><a>Contact</a></li>
 	</ul>
 </div>
