Fix balise manquante

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,6 +123,7 @@
                       <p>Passionated and expert, we will give you the best advices for the choice of plants, their disposition and their harmony.</p>
                   </div>
                 </div>
+            </div>
           </div>
         </div>
       </div>
