Ajout de la fleche bas sur la premiere page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,11 @@
           <p>
             {{company}} allow you to design, together, your own Eden.
           </p> 
+        </div>
+        <div>
+          <a class="scroll-arrow" [scrollTo]="'#about'" [scrollDuration]="700">
+            <i class="fa fa-angle-down"></i>
+          </a>
         </div>                 
       </div>        
     </div>
