--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -154,6 +154,18 @@
         </div>
       </div>
     </div>
+
+    <div class="section section-3" id="contact">
+      <app-contact-map></app-contact-map>
+    </div>
+    
+    <footer class="footer footer-color-black">
+      <div class="container">
+        <div class="copyright">
+          © 2017 Bertrand Samson, page inspired by Rubik
+        </div>
+      </div>
+    </footer>
   </div>
   <app-right-menu></app-right-menu>
 </div>
