--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -16,6 +16,6 @@
 		</li>
 		<li><a [scrollTo]="'#about'" [scrollDuration]="700">About</a></li>
 		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700">What we do</a></li>
-		<li><a>Contact</a></li>
+		<li><a [scrollTo]="'#contact'" [scrollDuration]="700">Contact</a></li>
 	</ul>
 </div>
