--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -14,8 +14,8 @@
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
-		<li><a [scrollTo]="'#about'" [scrollDuration]="700">About</a></li>
-		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700">What we do</a></li>
-		<li><a [scrollTo]="'#contact'" [scrollDuration]="700">Contact</a></li>
+		<li><a [scrollTo]="'#about'" [scrollDuration]="700" translate>About</a></li>
+		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700" translate>What we do</a></li>
+		<li><a [scrollTo]="'#contact'" [scrollDuration]="700" translate >Contact</a></li>
 	</ul>
 </div>
