--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -1,17 +1,17 @@
 <div class="contact-container">
 	<div class="address-container">
 		<div class="address">
-			<h4>Where to meet ?</h4>
+			<h4 translate>Where to meet</h4>
 			<p class="text-gray">
 				11 Chemin Neuf <br>
 				Biot, France
 			</p>
-			<h4>Want to say hello ?</h4>
+			<h4 translate>Want to say hello</h4>
 			<a class="btn btn-black btn-contact">
-				CONTACT US
+				<span translate>CONTACT US</span>
 				<i class="fa fa-paper-plane"></i>
 			</a>
-			<h4>Want to share ?</h4>
+			<h4 translate>Want to share</h4>
 			<div class="col-md-6" style="float:left">
 				<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i>Facebook</button>
 			</div>
