--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,10 +25,10 @@
         <div>
           <div class="btn-group-custom">
             <div class="col-md-6" class="btn-langue">
-              <button class="btn btn-lg btn-contact btn-block btn-share" [ngClass]="{'btn-langue-active': isFrLangueSelected}" (click)="selectLanguage('fr')">Français</button>
+              <button class="btn btn-lg btn-contact btn-block btn-share" [ngClass]="{'btn-langue-active': isFrLangueSelected}" (click)="selectLanguage('fr')">FR</button>
             </div>
             <div class="col-md-6" class="btn-langue">
-              <button class="btn btn-lg btn-contact btn-block btn-share" [ngClass]="{'btn-langue-active': !isFrLangueSelected}" (click)="selectLanguage('en')">English</button>
+              <button class="btn btn-lg btn-contact btn-block btn-share" [ngClass]="{'btn-langue-active': !isFrLangueSelected}" (click)="selectLanguage('en')">EN</button>
             </div>
           </div>          
           <a class="scroll-arrow" [scrollTo]="'#about'" [scrollDuration]="700">
