--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="map">
-		<agm-map [latitude]="lat" [longitude]="lng" [zoomControl]=false [zoom]=14 [scrollwheel]=false>
+		<agm-map [latitude]="lat" [longitude]="lng" [zoom]=14 [scrollwheel]=false>
 		  	<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 		</agm-map>
 	</div>
