--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -16,6 +16,7 @@
 		</li>
 		<li><a [scrollTo]="'#about'" [scrollDuration]="700" translate>About</a></li>
 		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700" translate>What we do</a></li>
+		<li><a [scrollTo]="'#example'" [scrollDuration]="700" translate>Example</a></li>
 		<li><a [scrollTo]="'#contact'" [scrollDuration]="700" translate >Contact</a></li>
 	</ul>
 </div>
