--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -143,7 +143,7 @@
         </div>
       </div>
     </div>
-    <div class="section" id="example">
+    <div class="section section-3" id="example">
       <div class="text-area">
         <div class="container">
           <div class="row">
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <div class="section section-3" id="contact">
+    <div class="section section-4" id="contact">
       <app-contact-map></app-contact-map>
     </div>
     
