--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,46 @@
             </div>
           </div>
         </div>
+      </div>      
+    </div>
+    <div class="section section-projet" id="projects">
+      <div class="text-area">
+        <div class="container">
+          <div class="title">
+            <h2 translate>Projects</h2>
+            <div class="separator-container">
+              <div class="separator line-separator">
+                ∎
+              </div>
+            </div>
+          </div>
+          <div class="projet-container">
+            <div class="row">
+              <div class="col-md-6">
+                <span translate>Professional Text</span>
+                <ul>
+                  <li translate>Professional Text Elem 1</li>
+                  <li translate>Professional Text Elem 2</li>
+                  <li translate>Professional Text Elem 3</li>
+                  <li translate>Professional Text Elem 4</li>
+                  <li translate>Professional Text Elem 5</li>
+                  <li translate>Professional Text Elem 6</li>
+                </ul>               
+              </div>
+              <div class="col-md-6">
+                <span translate>Private Text</span>    
+                <ul>
+                  <li translate>Private Text Elem 1</li>
+                  <span translate>Private Text Elem 2</span>
+                  <li translate>Private Text Elem 3</li>
+                </ul>     
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="section section-image" id="images">
       <div class="container" >
         <div class="row">
           <div class="col-md-12">
@@ -116,8 +155,8 @@
                       <div class="icon">
                         <i class="fa fa-pencil-square-o"></i>
                       </div>
-                      <h3 translate>Design Landscape</h3>
-                      <p translate>Design Landscape Text</p>
+                      <h3 translate>Diagnostic Title</h3>
+                      <p translate>Diagnostic Text</p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -125,8 +164,8 @@
                       <div class="icon">
                         <i class="fa fa-camera-retro"></i>
                       </div>
-                      <h3 translate>Provide Support</h3>
-                      <p translate>Provide Support Text</p>
+                      <h3 translate>Project Title</h3>
+                      <p translate>Project Text</p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -134,8 +173,8 @@
                       <div class="icon">
                         <i class="fa fa-pagelines"></i>
                       </div>
-                      <h3 translate>Green Expertise</h3>
-                      <p translate>Green Expertise Text</p>
+                      <h3 translate>Advice Title</h3>
+                      <p translate>Advice Text</p>
                   </div>
                 </div>
             </div>
@@ -143,7 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="section section-3" id="example">
+    <div class="section section-3" id="slider">
       <div class="text-area">
         <div class="container">
           <div class="row">
@@ -167,6 +206,25 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="section section-parcours" id="resume">
+      <div class="text-area">
+        <div class="container">
+          <div class="row">
+            <div class="title">
+              <h2 translate>Resume</h2>
+              <div class="separator-container">
+                <div class="separator line-separator">
+                  ∎
+                </div>
+              </div>
+              <p class="large" translate>
+                Resume Text               
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>   
     </div>
     <div class="section section-4" id="contact">
       <app-contact-map></app-contact-map>
