--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,24 +69,28 @@
           </div>
           <div class="projet-container">
             <div class="row">
-              <div class="col-md-6">
-                <span translate>Professional Text</span>
-                <ul>
-                  <li translate>Professional Text Elem 1</li>
-                  <li translate>Professional Text Elem 2</li>
-                  <li translate>Professional Text Elem 3</li>
-                  <li translate>Professional Text Elem 4</li>
-                  <li translate>Professional Text Elem 5</li>
-                  <li translate>Professional Text Elem 6</li>
-                </ul>               
+              <div class="col-md-6">                
+                <div class="card">
+                  <span translate>Professional Text</span>
+                  <ul>
+                    <li translate>Professional Text Elem 1</li>
+                    <li translate>Professional Text Elem 2</li>
+                    <li translate>Professional Text Elem 3</li>
+                    <li translate>Professional Text Elem 4</li>
+                    <li translate>Professional Text Elem 5</li>
+                    <li translate>Professional Text Elem 6</li>
+                  </ul>
+                </div>               
               </div>
               <div class="col-md-6">
-                <span translate>Private Text</span>    
-                <ul>
-                  <li translate>Private Text Elem 1</li>
-                  <span translate>Private Text Elem 2</span>
-                  <li translate>Private Text Elem 3</li>
-                </ul>     
+                <div class="card">
+                  <span translate>Private Text</span>    
+                  <ul>
+                    <li translate>Private Text Elem 1</li>
+                    <span translate>Private Text Elem 2</span>
+                    <li translate>Private Text Elem 3</li>
+                  </ul>
+                </div>     
               </div>
             </div>
           </div>
