--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -142,6 +142,10 @@
 .card{
   margin-bottom: 30px
 }
+.card .card-sidetext{
+  text-align: left;
+  text-indent: 10%;
+}
 .section-projet .card ul{
   text-align: left;
   margin-left: 10%;
