--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -222,9 +222,18 @@
                   ∎
                 </div>
               </div>
-              <p class="large" translate>
-                Resume Text               
-              </p>
+              <div class="row" in-view (inview)="animateRow($event, 3)">
+                <div class="card add-animation animation" [ngClass]="{'animate': rowInView[3]}" >
+                  <div class="row">
+                    <div class="col-md-4">                      
+                      <img src="/assets/images/profil.jpg">                      
+                    </div>
+                    <div class="col-md-8 card-sidetext" translate>                      
+                      Resume Text 
+                    </div>
+                  </div>                   
+                </div>
+              </div>              
             </div>
           </div>
         </div>
