--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -49,11 +49,9 @@
   top: 0;
 }
 .section-header .content {
-  position: relative;
   color: white;
   text-align: center;
   text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
-  vertical-align: center;
   line-height: 1.7;
   position: relative;
   top: 50%;
@@ -81,6 +79,7 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
   margin: 1em 0 0.5em;
+  text-shadow: 1px 1px 1px black;
 }
 .section-header p span {
   text-transform: lowercase;
@@ -145,6 +144,14 @@
 .card .card-sidetext{
   text-align: left;
   text-indent: 10%;
+  padding-top: 20px;
+  padding-right: 30px;
+}
+.card .card-img-left {
+  color: #fff;
+  height: 100%;
+  background: url(/assets/images/profil2.jpg) center no-repeat;
+  background-size: cover;
 }
 .section-projet .card ul{
   text-align: left;
@@ -210,7 +217,7 @@ a.scroll-arrow{
   line-height: 52px;
   border-radius: 50%;
   height: 50px;
-  border: 1px solid white;
+  border: 2px solid white;
   display: block;
   margin: 0 auto;
   position: absolute;
@@ -222,17 +229,16 @@ a.scroll-arrow{
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   transform: translateX(-50%);
-  opacity: .9;
   cursor: pointer;
+  opacity: 0.8;
 }
 a.scroll-arrow:hover{
   color: white;
+  border: 2px solid white;
+  opacity: 1;
 }
 a.scroll-arrow i:hover, a.scroll-arrow i:focus {
   color: white;
-}
-a.scroll-arrow:hover {
-  opacity: 1;
 }
 .section-4, .btn-group-custom {
   position: relative;
