--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,11 +225,14 @@
               <div class="row" in-view (inview)="animateRow($event, 3)">
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[3]}" >
                   <div class="row">
-                    <div class="col-md-4">                      
-                      <img src="/assets/images/profil.jpg">                      
+                    <div class="col-md-4">  
+                      <div class="card-img-left">                          
+                      </div>                             
                     </div>
                     <div class="col-md-8 card-sidetext" translate>                      
-                      Resume Text 
+                      <p translate>Resume Text 1</p>              
+                      <p translate>Resume Text 2</p>              
+                      <p translate>Resume Text 3</p>
                     </div>
                   </div>                   
                 </div>
